@@ -5,6 +5,7 @@ Revision history for Perl module TestRail::API
     - Fix issue where TODO PASS was reported in tests with TODO FAILs.
     - Fix issue where TODO FAILED steps were reported as TODO PASS.
     - Fix issue where the value of the step_results field was ignored by Test::Rail::Parser
+    - Fix issue where Test::Rail::Parser would truncate results in non case-per-ok mode
 
 0.034 2016-02-18 TEODESIAN
     - Use Capture::Tiny rahter than IO::CaptureOutput in unit tests
